[gd_scene load_steps=6 format=2]

[ext_resource path="res://entity/player/player_capsuleshape.tres" type="Shape" id=1]
[ext_resource path="res://scripts/entity_scripts/player.gd" type="Script" id=2]
[ext_resource path="res://scripts/entity_scripts/camera.gd" type="Script" id=3]
[ext_resource path="res://assets/images/croshair.png" type="Texture" id=4]
[ext_resource path="res://entity/player/anim_playercrouch.tres" type="Animation" id=5]

[node name="player" type="KinematicBody"]
input_ray_pickable = false
script = ExtResource( 2 )
camera_position = [ Transform( -1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0 ), Transform( -1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, -1.5 ) ]

[node name="PlayerCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.9, 0 )
shape = ExtResource( 1 )

[node name="PlayerHead" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0 )

[node name="PlayerCamera" type="Camera" parent="PlayerHead"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
current = true
script = ExtResource( 3 )

[node name="PlayerLight" type="SpotLight" parent="PlayerHead"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
visible = false
light_bake_mode = 0
shadow_enabled = true

[node name="PlayerRayCast" type="RayCast" parent="PlayerHead"]
visible = false
enabled = true
cast_to = Vector3( 0, 0, 3 )
collide_with_areas = true

[node name="PlayerStepsAudio3D" type="AudioStreamPlayer3D" parent="."]
bus = "FX"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_stats" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 0.2
anchor_bottom = 1.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="ProgressBar" parent="player_stats"]
margin_right = 170.0
margin_bottom = 14.0

[node name="stamina" type="ProgressBar" parent="player_stats"]
margin_top = 18.0
margin_right = 170.0
margin_bottom = 32.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/crouch = ExtResource( 5 )
